Working on hiding dropdown show-all triangle in resource tree.

--- a/assets/css/lunchbox.css
+++ b/assets/css/lunchbox.css
@@ -10,3 +10,8 @@
     height:24px;
     width:24px;
 }
+/* Custom Icon for our class_key */
+.icon-lunchbox .x-tree-node-icon {
+    background-image: url(../images/lunchbox-icon.png) !important;
+}
+
