--- a/assets/css/mgr.css
+++ b/assets/css/mgr.css
@@ -17,7 +17,8 @@ color: #3697cd;
 #lunchbox_canvas {
  background: #fff;
     margin: 0px 10px 0px;
-    padding-bottom: 20px; 
+    padding: 15px; 
+    padding-top: 0px;
 -webkit-box-shadow: 0px 0px 3px -1px rgba(181,179,181,1);
 -moz-box-shadow: 0px 0px 3px -1px rgba(181,179,181,1);
 box-shadow: 0px 0px 3px -1px rgba(181,179,181,1);
@@ -193,6 +194,9 @@ table.classy thead a {
     color: #fff;
 }
 
+table.classy td {
+  padding: 10px 15px !important;
+}
 table thead a:hover {
     color: #fff;
     text-decoration: underline;
