--- a/assets/css/mgr.css
+++ b/assets/css/mgr.css
@@ -357,6 +357,17 @@ tr:nth-child(odd) {background: #fff}
   color: #636a70;
 }
 
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
+}
+
+.children-wrapper {
+  margin-top: 20px;
+}
 /* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements.
    j.mp/bestclearfix */
 .clear:before, .clear:after,
