--- a/assets/css/lunchbox.css
+++ b/assets/css/lunchbox.css
@@ -33,6 +33,8 @@
 #lunchbox_breadcrumbs {
     padding: 2px 0 0 5px;
     color: #9e9e9e;
+    text-align: right;
+    margin: 10px 30px 0px 0px;
 }
 .lunchbox-grid-bc table {
     border: none !important;
@@ -43,4 +45,8 @@
 
 .x-grid3-row-table td {
     vertical-align: middle;
+}
+
+.container {
+    margin-top: 10px;
 }
