--- a/assets/css/lunchbox.css
+++ b/assets/css/lunchbox.css
@@ -34,8 +34,10 @@
 #lunchbox_breadcrumbs {
     padding: 2px 0 0 5px;
     color: #9e9e9e;
-    text-align: right;
     margin: 10px 30px 0px 0px;
+    position: absolute;
+    left: 40px;
+    top: 55px;
 }
 .lunchbox-grid-bc table {
     border: none !important;
@@ -46,8 +48,4 @@
 
 .x-grid3-row-table td {
     vertical-align: middle;
-}
-
-.container {
-    margin-top: 10px;
 }
