--- a/assets/css/lunchbox.css
+++ b/assets/css/lunchbox.css
@@ -34,7 +34,8 @@
     background-image: url(../images/lunchbox-icon.png) !important;
 }
 
-#lunchbox_breadcrumbs {
+#lunchbox_breadcrumbs,
+#lunchbox_breadcrumbs_modal {
     padding: 2px 0 0 5px;
     color: #9e9e9e;
     margin: 10px 30px 0px 0px;
@@ -42,6 +43,12 @@
     left: 40px;
     top: 55px;
 }
+
+#lunchbox_breadcrumbs_modal {
+    top: 47px;
+    left: 15px;
+}
+
 .lunchbox-grid-bc table {
     border: none !important;
 }
