--- a/assets/css/mgr.css
+++ b/assets/css/mgr.css
@@ -125,10 +125,23 @@ h2.lunchbox_cmp_heading {
   cursor: pointer !important;
 }
 
+a.btn-orange {
+  background: #F86C05 !important;
+  color: #fff !important;
+  border: 1px solid #F86C05 !important;
+}
+
 .btn-primary {
   background: #2aa798;
   color: #fff !important;
   border: 1px solid #2aa798;
+}
+
+a.btn-remove {
+  background: #913938 !important;
+  color: #fff !important;
+  border: 1px solid #913938 !important;  
+  padding: 2px 4px !important;
 }
 
 .btn-info {
@@ -369,6 +382,7 @@ tr:nth-child(odd) {background: #fff}
 .children-wrapper {
   margin-top: 35px;
 }
+
 /* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements.
    j.mp/bestclearfix */
 .clear:before, .clear:after,
