--- a/assets/css/lunchbox.css
+++ b/assets/css/lunchbox.css
@@ -35,7 +35,7 @@
 }
 
 #lunchbox_breadcrumbs,
-#lunchbox_breadcrumbs_modal {
+.lunchbox_breadcrumbs_modal {
     padding: 2px 0 0 5px;
     color: #9e9e9e;
     margin: 10px 30px 0px 0px;
@@ -44,7 +44,7 @@
     top: 55px;
 }
 
-#lunchbox_breadcrumbs_modal {
+.lunchbox_breadcrumbs_modal {
     top: 47px;
     left: 15px;
 }
@@ -73,11 +73,15 @@ content: "\f0b1" !important;
     width: 70% !important;
 }
 
-#select_children {
+.modal-content-result {
   width: 70%;
   float: left;
 }
 
+.set-parent-modal-content {
+    width: 100% !important;
+    float: none !important;
+}
 #queue-children {
     width: 29%;
     float: right;
