--- a/assets/css/mgr.css
+++ b/assets/css/mgr.css
@@ -379,7 +379,9 @@ tr:nth-child(odd) {background: #fff}
   float: right;
 }
 
-
+.children-wrapper {
+  margin-top: 35px;
+}
 
 /* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements.
    j.mp/bestclearfix */
